# codeforge-vscode-plugin

./: .gitignore  .vscodeignore  CHANGELOG.md  CLAUDE.md  LICENSE  PUBLISHING.md  README.md  dockerOperations.js  extension.js  icon.png.instructions.md  package-lock.json  package.json  taskProvider.js
.github/workflows/: ci.yml  create-release.yml  publish.yml
docs/: CRASH_DISCOVERY_REFERENCE.md  DEVELOPER_GUIDE.md  FUZZING_AND_CRASH_SYSTEM_ARCHITECTURE.md  FUZZING_CONFIGURATION.md  PORT_FORWARDING.md  SYSTEM_ARCHITECTURE_OVERVIEW.md  TASK_PROVIDER.md
examples/: tasks.json
examples/fuzzing-config/: README.md  settings.json
examples/fuzzing/codeforge-cmake/: .gitignore  CMakeLists.txt  CMakePresets.json
examples/fuzzing/codeforge-cmake/src/: main.cpp
resources/scripts/: build-fuzz-tests.sh  clear-crashes.sh  find-crashes.sh  find-fuzz-tests.sh  generate-backtrace.sh  launch-process-in-docker.sh  reevaluate-crashes.sh  run-fuzz-tests.sh
resources/templates/: .gitignore  Dockerfile
src/: extension.js
src/core/: dockerOperations.js  initializationDetectionService.js  resourceManager.js
src/fuzzing/: backtraceService.js  cmakePresetDiscovery.js  corpusReportService.js  corpusViewerService.js  crashDiscoveryService.js  crashReportService.js  fuzzRunner.js  fuzzTargetBuilder.js  fuzzerDiscoveryService.js  fuzzerUtils.js  fuzzingConfig.js  fuzzingOperations.js  fuzzingTerminal.js  (+1 more)
test/: DEBUGGING_SUMMARY.md  README.md  debug-extension.md  runTest.js  test-minimal-task.js  test-provider.js  verify-extension-loading.js  verify-registration.js  verify-tasks.js
(+55 files in other folders)
